TestCases/LLVMTests/SyntaxErrorTests/tests/test35.c
if (1) {
    printf("Conditionals should not work globally\n");
}

int main() {
    return 0;
}
